Include only the handler.js in the deploy package.

--- a/serverless.yml
+++ b/serverless.yml
@@ -16,6 +16,11 @@ provider:
         - "cloudfront:CreateInvalidation"
       Resource: "*"
 
+package:
+  patterns:
+    - '!**/*'
+    - handler.js
+
 functions:
   invalidate:
     handler: handler.handler
